fixed overflow

--- a/src/sass/content.block/footer.scss
+++ b/src/sass/content.block/footer.scss
@@ -24,7 +24,7 @@
     width: 100%;
 }
 
-.footer__item {
+.footer__item>svg {
     width: 24px;
     height: 24px;
 }
@@ -33,14 +33,15 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-content: space-around;
     order: -2;
     padding-top: 48px;
-    height: 200px;
+    height: 175px;
+    width: 100%;
 }
 
 .footer__link {
     @include theme_font_s;
-    padding: 4px 72px 4px 32px;
 }
 
 .footer__form {
