--- a/src/sass/nullify.scss
+++ b/src/sass/nullify.scss
@@ -61,7 +61,3 @@ figure {
 input, button {
     border: 0;
 }
-
-svg {
-    display: block;
-}
